--- a/Car Rental/Makefile
+++ b/Car Rental/Makefile
@@ -1,8 +1,14 @@
+DIRS = "." "rental_system" "system_statistics"
+
+
 Main.class: Main.java
 	javac Main.java
 
 run: Main.class
 	java Main
 
+
 clean:
-	rm -f *.class
+	@for now in $(DIRS); do \
+		rm -f $$now/*.class; \
+	done
