cleanup, javadoc start

--- a/Car Rental/Makefile
+++ b/Car Rental/Makefile
@@ -1,4 +1,5 @@
-DIRS = "." "rental_system" "system_statistics" "orders" "frames" "forms"
+PACKAGES = "rental_system" "system_statistics" "orders" "frames" "forms"
+DIRS = "." $(PACKAGES)
 
 
 all: Main.class
@@ -9,8 +10,12 @@ Main.class:
 run: Main.class
 	java -cp lib/*:. Main
 
+javadoc:
+	javadoc -d ./docs/ $(PACKAGES)
 
 clean:
 	@for now in $(DIRS); do \
 		rm -f $$now/*.class; \
 	done
+	@echo "*.class removed"
+	rm -rf docs/*
